Fixed view height on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 html {
   margin: 0;
-  height: 100%;
+  min-height: 100vh;
   background-color: #121212;
   background-image: url('images/witchhunterBackground.png');
   background-size: cover;
-  background-position: center;
+  background-position: center top;
   background-repeat: no-repeat;
 }
 
@@ -36,6 +36,10 @@ a {
   color: yellow;
 }
 
+.topLink {
+  margin-left: 10px;
+}
+
 .center {
   height: auto;
   margin: auto;
@@ -55,17 +59,29 @@ img {
   .center {
     width: 95%;
   }
+
+  .logo {
+    margin-top: 50px;
+  }
 }
 
 @media (min-width:961px) {
   .center {
     width: 75%;
   }
+
+  .logo {
+    margin-top: 100px;
+  }
 }
 
 @media (min-width:1980px) {
   .center {
     width: 50%;
+  }
+
+  .logo {
+    margin-top: 200px;
   }
 }
 
